@@ -3,9 +3,15 @@ module ActiveScaffold
     module AssociationHelpers
       # Provides a way to honor the :conditions on an association while searching the association's klass
       def association_options_find(association, conditions = nil)
+        conditions = options_for_association_conditions(association) if conditions.nil?
         relation = association.klass.where(conditions).where(association.options[:conditions])
         relation = relation.includes(association.options[:include]) if association.options[:include]
         relation.all
+      end
+
+      # Provides a way to honor the :conditions on an association while searching the association's klass
+      def sorted_association_options_find(association, conditions = nil)
+        association_options_find(association, conditions).sort_by(&:to_label)
       end
 
       def association_options_count(association, conditions = nil)
@@ -14,6 +20,7 @@ module ActiveScaffold
 
       # returns options for the given association as a collection of [id, label] pairs intended for the +options_for_select+ helper.
       def options_for_association(association, include_all = false)
+        ActiveSupport::Deprecation.warn "options_for_association should not be used, use association_options_find directly"
         available_records = association_options_find(association, include_all ? nil : options_for_association_conditions(association))
         available_records ||= []
         available_records.sort{|a,b| a.to_label <=> b.to_label}.collect { |model| [ model.to_label, model.id ] }
