@@ -5,6 +5,7 @@
 - Add HTML5 form fields
 - Add :chosen form_ui, and :chosen and :multi_chosen search_ui
 - Fix nested with has_one associations
+- Support optgroup in :select and :chosen form_ui
 
 = 3.2.15 (not released yet)
 - Prepare to unify field overrides and list_ui method signatures
